--- a/.github/workflows/github_package_repository.yaml
+++ b/.github/workflows/github_package_repository.yaml
@@ -51,25 +51,10 @@ jobs:
           push: false
           tags: ${{ steps.docker-meta.outputs.tags }}
           labels: ${{ steps.docker-meta.outputs.labels }}
-      
-      - name: "anchore: Scan the Docker Image"
-        id: anchore-scan
-        uses: anchore/scan-action@v3
-        with:
-          image: ${{ steps.docker-build.outputs.digest }}
-          fail-build: false
-          acs-report-enable: true
-          severity-cutoff: "critical"
-        
-      - name: "anchore: Upload SARIF report"
-        id: anchore-upload
-        uses: github/codeql-action/upload-sarif@v1
-        with:
-          sarif_file: results.sarif
 
-      - name: "docker: Push Docker image [main branch]"
+      - name: "docker: Push Docker image [master branch]"
         id: docker-publish
-        if: github.ref_name == 'main'
+        if: github.ref_name == 'master'
         uses: docker/build-push-action@v2
         with:
           context: .
